err/atrium-tools.err
Listing '.'...
Listing './bin'...
Compiling './bin/create_users.py'...
***   File "./bin/create_users.py", line 99
    print args.file
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/template.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/atrium_apps'...
Compiling './lib/python3.5/site-packages/atrium_apps/FD_to_group.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/FD_to_group.py", line 44
    print 'session.create_group(%s)' % g
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/atrium_apps/MDP.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/MDP.py", line 119
    print 'utilisateur inconnu %s' % user
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atrium_apps/a.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/a.py", line 101
    print 'bad arguments'
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atrium_apps/atrium_create_projet.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/atrium_create_projet.py", line 58
    print "User %s exists. Update it's email and password" % user_id
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atrium_apps/atrium_ls.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/atrium_ls.py", line 78
    print '%sfolders=%d files=%d' % ('  '*level, folders, files)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/atrium_apps/atrium_shell.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/atrium_shell.py", line 132
    print 'host=[prod] cd=[]'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atrium_apps/atrium_upgrade.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/atrium_upgrade.py", line 71
    print repr(_query)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/atrium_apps/atrium_upgrade_local_roles.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/atrium_upgrade_local_roles.py", line 42
    print 'query', repr(_query)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/atrium_apps/create_users.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/create_users.py", line 99
    print args.file
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atrium_apps/draw_tree.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/draw_tree.py", line 133
    print 'path %s not found' % path
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atrium_apps/g_create_user.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/g_create_user.py", line 205
    print 'Bad email %s' % email
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atrium_apps/published.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/published.py", line 29
    print 'cannot connect to', host
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atrium_apps/query.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/query.py", line 21
    print repr(query)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/atrium_apps/remove_cut.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/remove_cut.py", line 62
    print '--'*level, entry[u'path'], '|', pp, '|', title, '|', uid
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atrium_apps/test.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/test.py", line 181
    print '...', b, ':', props[b]
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atrium_apps/test_batch.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/test_batch.py", line 49
    print _cmd
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atrium_apps/user_data.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/user_data.py", line 33
    print 'max=%d' % limit
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atrium_apps/user_df_to_company.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/user_df_to_company.py", line 61
    print id, name, df, role
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atrium_apps/users_to_members.py'...
***   File "./lib/python3.5/site-packages/atrium_apps/users_to_members.py", line 50
    print i, user.email, key
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/atrium_tools-3.0.4.egg-info'...
Listing './lib/python3.5/site-packages/nuxeolib'...
Compiling './lib/python3.5/site-packages/nuxeolib/core_session.py'...
***   File "./lib/python3.5/site-packages/nuxeolib/core_session.py", line 584
    except Exception, _error:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nuxeolib/session.py'...
***   File "./lib/python3.5/site-packages/nuxeolib/session.py", line 1317
    except Exception, _error:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
